# exercism

all_your_base/: CMakeLists.txt
all_your_base/src/: all_your_base.cpp  main.cpp
all_your_base/src/inc/: all_your_base.hpp
bob/: CMakeLists.txt
bob/src/: bob.cpp
bob/src/inc/: bob.hpp
robot_simulator/: CMakeLists.txt
robot_simulator/src/: robot_simulator.cpp
robot_simulator/src/inc/: robot_simulator.hpp
